--- a/Interface_Layer/Views/Sistemas.html
+++ b/Interface_Layer/Views/Sistemas.html
@@ -1,57 +1,122 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
     <title></title>
-	<meta charset="utf-8" />
-    <link rel="stylesheet" href="Content/bootstrap.min.css" media="screen">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="../Content/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="../Content/style.css">
 </head>
 <body>
-    <h2>Sistemas</h2>
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">Midis Seguridad</a>
+    <!--MENU-->
+    <div ng-controller="MenuCtrl">
+        <nav class="navbar navbar-inverse" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="Index.html">Midis Seguridad</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown" ng-repeat="modulo in modulos">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            {{modulo.Abreviatura}}<span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="menu in modulo.Menus">
+                                <a href="{{menu.Ruta}}">{{menu.Nombre}}</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <!--<li class="dropdown" ng-repeat="sistema in sistemas">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        {{sistema.Abreviatura}}
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li ng-repeat="modulo in modulos"><a href="#">{{modulo.Codigo}}</a></li>
-                    </ul>
-                </li>-->
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        Sistemas
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="Views/Sistemas/Sistemas.html">Administración de Sistemas</a></li>
-                        <li><a href="Views/Sistemas/Modulo.html">Administración de Módulos</a></li>
-                        <li><a href="Views/Sistemas/Menu.html">Administración de Menús</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        Usuarios
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="Views/Personas/ProgramasSociales.html">Administración de Programas Sociales</a></li>
-                        <li><a href="Views/Personas/Roles.html">Administración de Roles</a></li>
-                        <li><a href="Views/Personas/Personas.html">Administración de Personas</a></li>
-                        <li><a href="Views/Personas/Usuarios.html">Administración de Usuarios</a></li>
-                        <li><a href="Views/Personas/MenusRoles.html">Administración de Menús por Rol</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </nav>
+        </nav>
+    </div>
 
-    <script type="text/javascript" src="Scripts/jquery-3.1.1.min.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="Scripts/bootstrap.min.js"></script>
+    <!--CONTENIDO-->
+    <div class="container" ng-controller="SistemaCtrl">
+        <!--MANTENIMIENTO-->
+        <div class="row" data-ng-show="estaEditable">
+            <form name="frmSistema" style="width:800px;margin:0px auto;">
+                <input type="hidden" id="hdnId" data-ng-model="mysistema.Id" />
+                <div class="form-group">
+                    <label for="txtCodigo" class="col-sm-2 control-label">Codigo: </label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="txtCodigo" placeholder="Ingrese el codigo del sistema (obligatorio)" data-ng-model="mysistema.Codigo" required />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="txtNombre" class="col-sm-2 control-label">Nombre: </label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese el nombre del sistema (obligatorio)" data-ng-model="mysistema.Nombre" required />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="txtAbreviatura" class="col-sm-2 control-label">Abreviatura: </label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="txtAbreviatura" placeholder="Ingrese la abreviatura del sistema (obligatorio)" data-ng-model="mysistema.Abreviatura" required />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="txtDescripcion" class="col-sm-2 control-label">Descripcion: </label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la abreviatura del sistema" data-ng-model="mysistema.Descripcion" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="txtEstado" class="col-sm-2 control-label">Estado: </label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="txtEstado" placeholder="Ingrese el estado del sistema (obligatorio)" data-ng-model="mysistema.Estado" required />
+                    </div>
+                </div>
+                <br />
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <input type="submit" value="Guardar" data-ng-click="guardar()" data-ng-disabled="!frmSistema.$valid" class="btn btn-primary" />
+                        <input type="button" value="Cancelar" data-ng-click="nuevo()" class="btn btn-primary" />
+                    </div>
+                </div>
+                <br />
+            </form>
+        </div>
+
+        <!--LISTA-->
+        <div class="row" data-ng-hide="estaEditable">
+            <p><a data-ng-click="nuevo()" href="javascript:;" class="btn btn-primary">Nuevo</a></p>
+            <table class="table table-bordered table-hover" id="tab_logic">
+                <thead>
+                    <tr>
+                        <!--<th>Id</th>-->
+                        <th>Codigo</th>
+                        <th>Nombre</th>
+                        <th>Abreviatura</th>
+                        <th>Descripcion</th>
+                        <th>Estado</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="sistema in sistemas">
+                        <!--<td>{{sistema.Id}}</td>-->
+                        <td>{{sistema.Codigo}}</td>
+                        <td>{{sistema.Nombre}}</td>
+                        <td>{{sistema.Abreviatura}}</td>
+                        <td>{{sistema.Descripcion}}</td>
+                        <td>{{sistema.Estado}}</td>
+                        <td>
+                            <p><a data-ng-click="modificar(sistema)" href="javascript:;">Modificar</a></p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div id="divLoader" data-ng-show="loading">
+            <img id="imgLoader" src="../Images/ajax-loader.gif" class="ajax-loader" />
+        </div>
+    </div>
+
+    <script type="text/javascript" src="../Scripts/jquery-3.1.1.min.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../Scripts/angular.min.js"></script>
+    <script type="text/javascript" src="../Angular/myApp.module.js"></script>
+    <script type="text/javascript" src="../Angular/menuCtrl.js"></script>
+    <script type="text/javascript" src="../Angular/sistemaCtrl.js"></script>
 </body>
 </html>
