--- a/Interface_Layer/Views/Sistemas.html
+++ b/Interface_Layer/Views/Sistemas.html
@@ -31,46 +31,54 @@
     </div>
 
     <!--CONTENIDO-->
+    <div class="container">
+        <div class="col-md-4"></div>
+        <h3 class="col-md-4">Sistemas</h3>
+        <div class="col-md-4"></div>
+    </div>
     <div class="container" ng-controller="SistemaCtrl">
+        <strong class="error">{{ error }}</strong>
         <!--MANTENIMIENTO-->
         <div class="row" data-ng-show="estaEditable">
             <form name="frmSistema" style="width:800px;margin:0px auto;">
                 <input type="hidden" id="hdnId" data-ng-model="mysistema.Id" />
-                <div class="form-group">
-                    <label for="txtCodigo" class="col-sm-2 control-label">Codigo: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="txtCodigo" placeholder="Ingrese el codigo del sistema (obligatorio)" data-ng-model="mysistema.Codigo" required />
+                <div class="container-fluid form-group">
+                    <label for="txtCodigo" class="col-md-2 control-label">Codigo: </label>
+                    <div class="col-md-2">
+                        <input type="text" class="form-control" id="txtCodigo" placeholder="Ingrese el codigo del sistema (obligatorio)" data-ng-model="mysistema.Codigo" maxlength="02" required />
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="txtNombre" class="col-sm-2 control-label">Nombre: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese el nombre del sistema (obligatorio)" data-ng-model="mysistema.Nombre" required />
+                <div class="container-fluid form-group">
+                    <label for="txtNombre" class="col-md-2 control-label">Nombre: </label>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese el nombre del sistema (obligatorio)" data-ng-model="mysistema.Nombre" maxlength="50" required />
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="txtAbreviatura" class="col-sm-2 control-label">Abreviatura: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="txtAbreviatura" placeholder="Ingrese la abreviatura del sistema (obligatorio)" data-ng-model="mysistema.Abreviatura" required />
+                <div class="container-fluid form-group">
+                    <label for="txtAbreviatura" class="col-md-2 control-label">Abreviatura: </label>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control" id="txtAbreviatura" placeholder="Ingrese la abreviatura del sistema (obligatorio)" data-ng-model="mysistema.Abreviatura" maxlength="20" required />
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="txtDescripcion" class="col-sm-2 control-label">Descripcion: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la abreviatura del sistema" data-ng-model="mysistema.Descripcion" />
+                <div class="container-fluid form-group">
+                    <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la abreviatura del sistema" data-ng-model="mysistema.Descripcion" maxlength="200" />
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="txtEstado" class="col-sm-2 control-label">Estado: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="txtEstado" placeholder="Ingrese el estado del sistema (obligatorio)" data-ng-model="mysistema.Estado" required />
+                <div class="container-fluid form-group">
+                    <label for="txtEstado" class="col-md-2 control-label">Estado: </label>
+                    <div class="col-md-6">
+                        <!--<input type="text" class="form-control" id="txtEstado" placeholder="Ingrese el estado del sistema (obligatorio)" data-ng-model="mysistema.Estado" required />-->
+                        <input type="radio" id="optActivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="true"> Activo<br>
+                        <input type="radio" id="optInactivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="false"> Inactivo<br>
                     </div>
                 </div>
                 <br />
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
+                <div class="container-fluid form-group">
+                    <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Guardar" data-ng-click="guardar()" data-ng-disabled="!frmSistema.$valid" class="btn btn-primary" />
-                        <input type="button" value="Cancelar" data-ng-click="nuevo()" class="btn btn-primary" />
+                        <input type="button" value="Cancelar" data-ng-click="nuevo()" class="btn btn-danger" />
                     </div>
                 </div>
                 <br />
@@ -79,7 +87,14 @@
 
         <!--LISTA-->
         <div class="row" data-ng-hide="estaEditable">
-            <p><a data-ng-click="nuevo()" href="javascript:;" class="btn btn-primary">Nuevo</a></p>
+            <p>
+                <!--<a data-ng-click="nuevo()" href="javascript:;" class="btn btn-primary">Nuevo</a>-->
+                <input type="button" value="Nuevo" data-ng-click="nuevo()" class="btn btn-primary" />
+                <!--<button type="button" class="btn btn-default text-center" aria-label="my button" style="border: 0px" data-ng-click="nuevo()">
+                    <span class="glyphicon glyphicon glyphicon-plus" style="color:#a0a0a0; font-size: 30px; vertical-align: middle;" aria-hidden="true"></span><br />
+                    Nuevo
+                </button>-->
+            </p>
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
