--- a/Interface_Layer/Views/Index.html
+++ b/Interface_Layer/Views/Index.html
@@ -1,13 +1,14 @@
 ﻿<!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-    <title></title>
+    <title>Modulo de Seguridad | Index</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../Content/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="../Content/style.css">
 </head>
 <body>
     <!--MENU-->
-    <div ng-controller="MenuCtrl">
+    <div ng-controller="MenusCtrl">
         <nav class="navbar navbar-inverse" role="navigation" >
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -33,6 +34,6 @@
     <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../Scripts/angular.min.js"></script>
     <script type="text/javascript" src="../Angular/myApp.module.js"></script>
-    <script type="text/javascript" src="../Angular/menuCtrl.js"></script>
+    <script type="text/javascript" src="../Angular/menusCtrl.js"></script>
 </body>
 </html>
