--- a/Interface_Layer/Views/Modulos.html
+++ b/Interface_Layer/Views/Modulos.html
@@ -1,14 +1,14 @@
 ﻿<!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-    <title></title>
+    <title>Modulos</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../Content/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="../Content/style.css">
 </head>
 <body>
     <!--MENU-->
-    <div ng-controller="MenuCtrl">
+    <div ng-controller="MenusCtrl">
         <nav class="navbar navbar-inverse" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -113,13 +113,13 @@
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
-                        <th>Codigo</th>
-                        <th>Nombre</th>
-                        <th>Abreviatura</th>
-                        <th>Descripcion</th>
-                        <th>Estado</th>
-                        <th>Sistema</th>
-                        <th></th>
+                        <th class="col-md-1">Codigo</th>
+                        <th class="col-md-4">Nombre</th>
+                        <th class="col-md-2">Abreviatura</th>
+                        <!--<th>Descripcion</th>-->
+                        <th class="col-md-1">Estado</th>
+                        <th class="col-md-3">Sistema</th>
+                        <th class="col-md-1"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -127,7 +127,7 @@
                         <td>{{modulo.Codigo}}</td>
                         <td>{{modulo.Nombre}}</td>
                         <td>{{modulo.Abreviatura}}</td>
-                        <td>{{modulo.Descripcion}}</td>
+                        <!--<td>{{modulo.Descripcion}}</td>-->
                         <td>{{modulo.Estado}}</td>
                         <td>{{modulo.Sistema.Nombre}}</td>
                         <td>
@@ -146,7 +146,7 @@
     <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../Scripts/angular.min.js"></script>
     <script type="text/javascript" src="../Angular/myApp.module.js"></script>
-    <script type="text/javascript" src="../Angular/menuCtrl.js"></script>
+    <script type="text/javascript" src="../Angular/menusCtrl.js"></script>
     <script type="text/javascript" src="../Angular/moduloCtrl.js"></script>
 </body>
 </html>
