--- a/Interface_Layer/Views/Index.html
+++ b/Interface_Layer/Views/Index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-    <title>Modulo de Seguridad | Index</title>
+    <title>Midis Seguridad | Index</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../Content/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="../Content/style.css">
