--- a/Interface_Layer/Views/Sistemas.html
+++ b/Interface_Layer/Views/Sistemas.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-    <title>Modulo de Seguridad | Sistemas</title>
+    <title>Midis Seguridad | Sistemas</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../Content/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="../Content/style.css">
@@ -66,7 +66,7 @@
                 <div class="container-fluid form-group">
                     <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la abreviatura del sistema" data-ng-model="mysistema.Descripcion" maxlength="200" />
+                        <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción del sistema" data-ng-model="mysistema.Descripcion" maxlength="200" />
                     </div>
                 </div>
                 <div class="container-fluid form-group">
@@ -119,7 +119,10 @@
                         <!--<td>{{sistema.Descripcion}}</td>-->
                         <td>{{sistema.Estado}}</td>
                         <td>
-                            <p><a data-ng-click="modificar(sistema)" href="javascript:;">Modificar</a></p>
+                            <p>
+                                <!--<a data-ng-click="modificar(sistema)" href="javascript:;">Modificar</a>-->
+                                <input type="button" class="btn btn-primary" value="Modificar" data-ng-click="modificar(sistema)" />
+                            </p>
                         </td>
                     </tr>
                 </tbody>
