--- a/Interface_Layer/Views/Roles.html
+++ b/Interface_Layer/Views/Roles.html
@@ -1,10 +1,143 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
-    <title></title>
-	<meta charset="utf-8" />
+    <title>Midis Seguridad | Roloes</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="../Content/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="../Content/style.css">
 </head>
 <body>
-    <h2>Roles</h2>
+    <!--MENU-->
+    <div ng-controller="MenusCtrl">
+        <nav class="navbar navbar-inverse" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="Index.html">Midis Seguridad</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown" ng-repeat="modulo in modulos">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            {{modulo.Abreviatura}}<span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="menu in modulo.Menus">
+                                <a href="{{menu.Ruta}}">{{menu.Nombre}}</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+    <!--CONTENIDO-->
+    <div class="container">
+        <div class="col-md-4"></div>
+        <h3 class="col-md-4">Sistemas</h3>
+        <div class="col-md-4"></div>
+    </div>
+    <div class="container" ng-controller="SistemaCtrl">
+        <div class="alert alert-danger" data-ng-show="tieneError">
+            <strong>ERROR: </strong> {{ error }}
+        </div>
+        <!--<strong class="error">{{ error }}</strong>-->
+        <!--MANTENIMIENTO-->
+        <div class="row" data-ng-show="estaEditable">
+            <form name="frmSistema" style="width:800px;margin:0px auto;">
+                <input type="hidden" id="hdnId" data-ng-model="mysistema.Id" />
+                <div class="container-fluid form-group">
+                    <label for="txtCodigo" class="col-md-2 control-label">Codigo: </label>
+                    <div class="col-md-2">
+                        <input type="text" class="form-control" id="txtCodigo" placeholder="Ingrese el codigo del sistema (obligatorio)" data-ng-model="mysistema.Codigo" maxlength="02" required />
+                    </div>
+                </div>
+                <div class="container-fluid form-group">
+                    <label for="txtNombre" class="col-md-2 control-label">Nombre: </label>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese el nombre del sistema (obligatorio)" data-ng-model="mysistema.Nombre" maxlength="50" required />
+                    </div>
+                </div>
+                <div class="container-fluid form-group">
+                    <label for="txtAbreviatura" class="col-md-2 control-label">Abreviatura: </label>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control" id="txtAbreviatura" placeholder="Ingrese la abreviatura del sistema (obligatorio)" data-ng-model="mysistema.Abreviatura" maxlength="20" required />
+                    </div>
+                </div>
+                <div class="container-fluid form-group">
+                    <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
+                    <div class="col-md-10">
+                        <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción del sistema" data-ng-model="mysistema.Descripcion" maxlength="200" />
+                    </div>
+                </div>
+                <div class="container-fluid form-group">
+                    <label for="txtEstado" class="col-md-2 control-label">Estado: </label>
+                    <div class="col-md-6">
+                        <!--<input type="text" class="form-control" id="txtEstado" placeholder="Ingrese el estado del sistema (obligatorio)" data-ng-model="mysistema.Estado" required />-->
+                        <input type="radio" id="optActivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="true"> Activo<br>
+                        <input type="radio" id="optInactivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="false"> Inactivo<br>
+                    </div>
+                </div>
+                <br />
+                <div class="container-fluid form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Guardar" data-ng-click="guardar()" data-ng-disabled="!frmSistema.$valid" class="btn btn-primary" />
+                        <input type="button" value="Cancelar" data-ng-click="nuevo()" class="btn btn-danger" />
+                    </div>
+                </div>
+                <br />
+            </form>
+        </div>
+
+        <!--LISTA-->
+        <div class="row" data-ng-hide="estaEditable">
+            <p>
+                <!--<a data-ng-click="nuevo()" href="javascript:;" class="btn btn-primary">Nuevo</a>-->
+                <input type="button" value="Nuevo" data-ng-click="nuevo()" class="btn btn-primary" />
+                <!--<button type="button" class="btn btn-default text-center" aria-label="my button" style="border: 0px" data-ng-click="nuevo()">
+                    <span class="glyphicon glyphicon glyphicon-plus" style="color:#a0a0a0; font-size: 30px; vertical-align: middle;" aria-hidden="true"></span><br />
+                    Nuevo
+                </button>-->
+            </p>
+            <table class="table table-bordered table-hover" id="tab_logic">
+                <thead>
+                    <tr>
+                        <!--<th>Id</th>-->
+                        <th class="col-md-2">Codigo</th>
+                        <th class="col-md-5">Nombre</th>
+                        <th class="col-md-3">Abreviatura</th>
+                        <!--<th>Descripcion</th>-->
+                        <th class="col-md-1">Estado</th>
+                        <th class="col-md-1"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="rol in roles">
+                        <!--<td>{{sistema.Id}}</td>-->
+                        <td>{{sistema.Codigo}}</td>
+                        <td>{{sistema.Nombre}}</td>
+                        <td>{{sistema.Abreviatura}}</td>
+                        <!--<td>{{sistema.Descripcion}}</td>-->
+                        <td>{{sistema.Estado}}</td>
+                        <td>
+                            <p>
+                                <!--<a data-ng-click="modificar(sistema)" href="javascript:;">Modificar</a>-->
+                                <input type="button" class="btn btn-primary" value="Modificar" data-ng-click="modificar(sistema)" />
+                            </p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        <div id="divLoader" data-ng-show="loading">
+            <img id="imgLoader" src="../Images/ajax-loader.gif" class="ajax-loader" />
+        </div>
+    </div>
+
+    <script type="text/javascript" src="../Scripts/jquery-3.1.1.min.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../Scripts/angular.min.js"></script>
+    <script type="text/javascript" src="../Angular/myApp.module.js"></script>
+    <script type="text/javascript" src="../Angular/menusCtrl.js"></script>
+    <script type="text/javascript" src="../Angular/rolCtrl.js"></script>
 </body>
 </html>
