--- a/Interface_Layer/Views/Sistemas.html
+++ b/Interface_Layer/Views/Sistemas.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group">
-                    <label for="txtEstado" class="col-md-2 control-label">Estado: </label>
+                    <label for="txtEstado" class="col-md-2 control-label">¿Está activo?: </label>
                     <div class="col-md-6">
                         <!--<input type="text" class="form-control" id="txtEstado" placeholder="Ingrese el estado del sistema (obligatorio)" data-ng-model="mysistema.Estado" required />-->
                         <input type="radio" id="optActivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="true"> Activo<br>
