--- a/Interface_Layer/Views/Roles.html
+++ b/Interface_Layer/Views/Roles.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-    <title>Midis Seguridad | Roloes</title>
+    <title>Midis Seguridad | Roles</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../Content/bootstrap.min.css" media="screen">
     <link rel="stylesheet" href="../Content/style.css">
@@ -33,54 +33,41 @@
     <!--CONTENIDO-->
     <div class="container">
         <div class="col-md-4"></div>
-        <h3 class="col-md-4">Sistemas</h3>
+        <h3 class="col-md-4">Roles</h3>
         <div class="col-md-4"></div>
     </div>
-    <div class="container" ng-controller="SistemaCtrl">
+    <div class="container" ng-controller="RolCtrl">
         <div class="alert alert-danger" data-ng-show="tieneError">
             <strong>ERROR: </strong> {{ error }}
         </div>
-        <!--<strong class="error">{{ error }}</strong>-->
         <!--MANTENIMIENTO-->
         <div class="row" data-ng-show="estaEditable">
-            <form name="frmSistema" style="width:800px;margin:0px auto;">
+            <form name="FrmRol" style="width:800px;margin:0px auto;">
                 <input type="hidden" id="hdnId" data-ng-model="mysistema.Id" />
-                <div class="container-fluid form-group">
-                    <label for="txtCodigo" class="col-md-2 control-label">Codigo: </label>
-                    <div class="col-md-2">
-                        <input type="text" class="form-control" id="txtCodigo" placeholder="Ingrese el codigo del sistema (obligatorio)" data-ng-model="mysistema.Codigo" maxlength="02" required />
-                    </div>
-                </div>
                 <div class="container-fluid form-group">
                     <label for="txtNombre" class="col-md-2 control-label">Nombre: </label>
                     <div class="col-md-6">
-                        <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese el nombre del sistema (obligatorio)" data-ng-model="mysistema.Nombre" maxlength="50" required />
-                    </div>
-                </div>
-                <div class="container-fluid form-group">
-                    <label for="txtAbreviatura" class="col-md-2 control-label">Abreviatura: </label>
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" id="txtAbreviatura" placeholder="Ingrese la abreviatura del sistema (obligatorio)" data-ng-model="mysistema.Abreviatura" maxlength="20" required />
+                        <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese el nombre del rol (obligatorio)" data-ng-model="myrol.Nombre" maxlength="50" required />
                     </div>
                 </div>
                 <div class="container-fluid form-group">
                     <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción del sistema" data-ng-model="mysistema.Descripcion" maxlength="200" />
+                        <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción del rol" data-ng-model="myrol.Descripcion" maxlength="200" />
                     </div>
                 </div>
                 <div class="container-fluid form-group">
                     <label for="txtEstado" class="col-md-2 control-label">Estado: </label>
                     <div class="col-md-6">
-                        <!--<input type="text" class="form-control" id="txtEstado" placeholder="Ingrese el estado del sistema (obligatorio)" data-ng-model="mysistema.Estado" required />-->
-                        <input type="radio" id="optActivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="true"> Activo<br>
-                        <input type="radio" id="optInactivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="false"> Inactivo<br>
+                        <input type="checkbox" id="chkEstado" name="Estado" ng-model="myrol.EstaActivo"><br>
+                        <!--<input type="radio" id="optActivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="true"> Activo<br>-->
+                        <!--<input type="radio" id="optInactivo" name="Estado" ng-model="mysistema.EstaActivo" ng-value="false"> Inactivo<br>-->
                     </div>
                 </div>
                 <br />
                 <div class="container-fluid form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Guardar" data-ng-click="guardar()" data-ng-disabled="!frmSistema.$valid" class="btn btn-primary" />
+                        <input type="submit" value="Guardar" data-ng-click="guardar()" data-ng-disabled="!FrmRol.$valid" class="btn btn-primary" />
                         <input type="button" value="Cancelar" data-ng-click="nuevo()" class="btn btn-danger" />
                     </div>
                 </div>
@@ -91,37 +78,23 @@
         <!--LISTA-->
         <div class="row" data-ng-hide="estaEditable">
             <p>
-                <!--<a data-ng-click="nuevo()" href="javascript:;" class="btn btn-primary">Nuevo</a>-->
                 <input type="button" value="Nuevo" data-ng-click="nuevo()" class="btn btn-primary" />
-                <!--<button type="button" class="btn btn-default text-center" aria-label="my button" style="border: 0px" data-ng-click="nuevo()">
-                    <span class="glyphicon glyphicon glyphicon-plus" style="color:#a0a0a0; font-size: 30px; vertical-align: middle;" aria-hidden="true"></span><br />
-                    Nuevo
-                </button>-->
             </p>
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
-                        <!--<th>Id</th>-->
-                        <th class="col-md-2">Codigo</th>
-                        <th class="col-md-5">Nombre</th>
-                        <th class="col-md-3">Abreviatura</th>
-                        <!--<th>Descripcion</th>-->
-                        <th class="col-md-1">Estado</th>
+                        <th class="col-md-9">Nombre</th>
+                        <th class="col-md-2">Estado</th>
                         <th class="col-md-1"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr ng-repeat="rol in roles">
-                        <!--<td>{{sistema.Id}}</td>-->
-                        <td>{{sistema.Codigo}}</td>
-                        <td>{{sistema.Nombre}}</td>
-                        <td>{{sistema.Abreviatura}}</td>
-                        <!--<td>{{sistema.Descripcion}}</td>-->
-                        <td>{{sistema.Estado}}</td>
+                        <td>{{rol.Nombre}}</td>
+                        <td>{{rol.Estado}}</td>
                         <td>
                             <p>
-                                <!--<a data-ng-click="modificar(sistema)" href="javascript:;">Modificar</a>-->
-                                <input type="button" class="btn btn-primary" value="Modificar" data-ng-click="modificar(sistema)" />
+                                <input type="button" class="btn btn-primary" value="Modificar" data-ng-click="modificar(rol)" />
                             </p>
                         </td>
                     </tr>
