--- a/Interface_Layer/Views/Usuarios.html
+++ b/Interface_Layer/Views/Usuarios.html
@@ -32,83 +32,90 @@
 
     <div class="container">
         <div class="col-md-4"></div>
-        <h3 class="col-md-4">Personas</h3>
+        <h3 class="col-md-4">Usuarios</h3>
         <div class="col-md-4"></div>
     </div>
-    <div class="container" ng-controller="PersonaCtrl">
+    <div class="container" ng-controller="UsuarioCtrl">
         <div class="alert alert-danger" data-ng-show="tieneError">
             <strong>ERROR: </strong> {{ error }}
         </div>
-        <!--<strong class="error">{{ error }}</strong>-->
         <!--MANTENIMIENTO-->
         <div class="row" data-ng-show="estaEditable">
-            <form name="frmPersona" style="width:800px;margin:0px auto;">
-                <input type="hidden" id="hdnId" data-ng-model="myperson.Id" />
+            <form name="frmUsuario" style="width:800px;margin:0px auto;">
+                <input type="hidden" id="hdnId" data-ng-model="myUser.Id" />
                 <div class="container-fluid form-group">
-                    <label for="txtNombre" class="col-md-2 control-label">Nombre: </label>
+                    <label for="txtUsuario" class="col-md-2 control-label">Usuario: </label>
                     <div class="col-md-8">
-                        <input type="text" class="form-control" id="txtNombre" placeholder="Ingrese el nombre de la persona (obligatorio)" data-ng-model="myperson.Nombre" maxlength="100" required />
+                        <input type="text" class="form-control" id="txtUsuario" placeholder="Ingrese el usuario (obligatorio)" data-ng-model="myUser.Usuario" maxlength="100" required />
                     </div>
                 </div>
                 <div class="container-fluid form-group">
-                    <label for="cmbTipoDocumentoPersona" class="col-md-2 control-label">Tipo Documento: </label>
-                    <div class="col-md-6">
-                        <select id="cmbTipoDocumentoPersona" class="form-control" ng-options="tipoDocumentoPersona.Nombre for tipoDocumentoPersona in tiposDocumentosPersonas track by tipoDocumentoPersona.Id" data-ng-model="myperson.TipoDocumentoPersona"></select>
-                    </div>
-                </div>
-                <div class="container-fluid form-group">
-                    <label for="txtNroDocumento" class="col-md-2 control-label">Numero Documento: </label>
-                    <div class="col-md-4">
-                        <input type="text" class="form-control" id="txtNroDocumento" placeholder="Ingrese el numero de documento de la persona (obligatorio)" data-ng-model="myperson.NumeroDocumento" maxlength="15" required />
-                    </div>
-                </div>
-                <div class="container-fluid form-group">
-                    <label for="txtDireccion" class="col-md-2 control-label">Dirección: </label>
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" id="txtDireccion" placeholder="Ingrese la dirección de la persona" data-ng-model="myperson.Direccion" maxlength="255" />
-                    </div>
-                </div>
-                <div class="container-fluid form-group">
-                    <label for="txtTelefono" class="col-md-2 control-label">Teléfono: </label>
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" id="txtTelefono" placeholder="Ingrese el teléfono de la persona" data-ng-model="myperson.Telefono" maxlength="15" />
-                    </div>
-                </div>
-                <div class="container-fluid form-group">
-                    <label for="txtCelular" class="col-md-2 control-label">Celular: </label>
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" id="txtCelular" placeholder="Ingrese el celular de la persona" data-ng-model="myperson.Celular" maxlength="15" />
-                    </div>
-                </div>
-                <div class="container-fluid form-group">
-                    <label for="txtEmail" class="col-md-2 control-label">Teléfono: </label>
+                    <label for="txtContrasena" class="col-md-2 control-label">Contraseña: </label>
                     <div class="col-md-8">
-                        <input type="text" class="form-control" id="txtEmail" placeholder="Ingrese el email de la persona" data-ng-model="myperson.Email" maxlength="50" />
+                        <input type="text" class="form-control" id="txtContrasena" placeholder="Ingrese la contraseña del usuario (obligatorio)" data-ng-model="myUser.Contrasena" maxlength="100" required />
                     </div>
                 </div>
                 <div class="container-fluid form-group">
-                    <label class="col-md-2 control-label">Tipo: </label>
+                    <label class="col-md-2 control-label">¿Caduca?: </label>
                     <div class="col-md-6">
                         <fieldset class="EsNatural">
-                            <input type="radio" id="optNatural" name="Tipo" ng-model="myperson.EsNatural" ng-value="true"> Natural<br>
-                            <input type="radio" id="optJuridico" name="Tipo" ng-model="myperson.EsNatural" ng-value="false"> Jurídico<br>
+                            <input type="checkbox" id="chkCaduca" name="Estado" ng-model="myUser.Caduca"><br>
                         </fieldset>
                     </div>
                 </div>
                 <div class="container-fluid form-group">
-                    <label class="col-md-2 control-label">Ambito: </label>
+                    <label for="txtPeriodoCaducidad" class="col-md-2 control-label">Periodo Caducidad: </label>
                     <div class="col-md-6">
-                        <fieldset class="EsInterno">
-                            <input type="radio" id="optInterno" name="Ambito" ng-model="myperson.EsInterno" ng-value="true"> Interno<br>
-                            <input type="radio" id="optExterno" name="Ambito" ng-model="myperson.EsInterno" ng-value="false"> Externo<br>
-                        </fieldset>
+                        <input type="text" class="form-control" id="txtPeriodoCaducidad" placeholder="Ingrese el periodo en dias en que el usuario caduca (obligatorio)" data-ng-model="myUser.PeriodoCaducidad" maxlength="9" required />
                     </div>
                 </div>
-                <!--<input type="hidden" id="hdnId" data-ng-model="mymodulo.Sistema" />-->
+                <!--<div class="container-fluid form-group">
+                    <label for="txtFechaUltimoCambio" class="col-md-2 control-label">Fec. Ultimo Cambio: </label>
+                    <div class="col-md-6">
+                        <input type="text" class="form-control" id="txtFechaUltimoCambio" placeholder="Ingrese el numero de documento de la persona (obligatorio)" data-ng-model="myUser.FechaUltimoCambio" maxlength="15" required />
+                    </div>
+                </div>-->
+                <div class="container-fluid form-group">
+                    <label class="col-md-2 control-label">¿Unico Ingreso?: </label>
+                    <div class="col-md-6">
+                        <input type="checkbox" id="chkCaduca" name="Estado" ng-model="myUser.UnicoIngreso"><br>
+                    </div>
+                </div>
+                <div class="container-fluid form-group">
+                    <label class="col-md-2 control-label">¿Ha Ingresado?: </label>
+                    <div class="col-md-6">
+                        <input type="checkbox" id="chkCaduca" name="Estado" ng-model="myUser.HaIngresado"><br>
+                    </div>
+                </div>
+                <div class="container-fluid form-group">
+                    <label class="col-md-2 control-label">¿Otros Logeos?: </label>
+                    <div class="col-md-6">
+                        <input type="checkbox" id="chkCaduca" name="Estado" ng-model="myUser.OtrosLogeos"><br>
+                    </div>
+                </div>
+                <div class="container-fluid form-group">
+                    <label for="txtEstado" class="col-md-2 control-label">Tipo: </label>
+                    <div class="col-md-6">
+                        <input type="radio" id="optActivo" name="Tipo" ng-model="myUser.Tipo" ng-value="I"> Activo<br>
+                        <input type="radio" id="optInactivo" name="Tipo" ng-model="myUser.Tipo" ng-value="E"> Inactivo<br>
+                    </div>
+                </div>
+                <div class="container-fluid form-group">
+                    <label class="col-md-2 control-label">¿Está activo?: </label>
+                    <div class="col-md-6">
+                        <input type="checkbox" id="chkEstado" name="Estado" ng-model="myUser.EstaActivo"><br>
+                    </div>
+                </div>
+                <div class="container-fluid form-group">
+                    <label for="cmbPersona" class="col-md-2 control-label">Persona: </label>
+                    <div class="col-md-8">
+                        <select id="cmbPersona" class="form-control" ng-options="persona.Nombre for persona in personas track by persona.Id" data-ng-model="myUser.Persona"></select>
+                    </div>
+                </div>
                 <br />
                 <div class="container-fluid form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Guardar" data-ng-click="guardar()" data-ng-disabled="!frmPersona.$valid" class="btn btn-primary" />
+                        <input type="submit" value="Guardar" data-ng-click="guardar()" data-ng-disabled="!frmUsuario.$valid" class="btn btn-primary" />
                         <input type="button" value="Cancelar" data-ng-click="nuevo()" class="btn btn-danger" />
                     </div>
                 </div>
@@ -118,19 +125,20 @@
 
         <!--LISTA-->
         <div class="row" data-ng-hide="estaEditable">
-            <form name="frmBusquedaPersona" style="width:800px;margin:0px auto;">
+            <form name="frmBusquedaUsuario" style="width:800px;margin:0px auto;">
                 <div class="container-fluid form-group">
                     <label for="txtBuscarNombre" class="col-md-2 control-label">Nombre: </label>
                     <div class="col-md-8">
-                        <input type="text" class="form-control" id="txtBuscarNombre" placeholder="Ingrese el nombre de la persona para buscar" data-ng-model="nombre" maxlength="100" />
+                        <input type="text" class="form-control" id="txtBuscarNombre" placeholder="Ingrese el nombre del usuario para buscar" data-ng-model="nombre" maxlength="100" />
                     </div>
                 </div>
                 <div class="container-fluid form-group">
-                    <label for="cmbBuscarTipoDocumentoPersona" class="col-md-2 control-label">Tipo Documento: </label>
-                    <div class="col-md-6">
-                        <select id="cmbBuscarTipoDocumentoPersona" class="form-control" data-ng-options="tipoDocumentoPersona.Nombre for tipoDocumentoPersona in tiposDocumentosPersonas" data-ng-model="tipoDocumentoPersona"></select>
+                    <label for="txtBuscarNombrePersona" class="col-md-2 control-label">Nombre Persona: </label>
+                    <div class="col-md-8">
+                        <input type="text" class="form-control" id="txtBuscarNombrePersona" placeholder="Ingrese el nombre de la persona para buscar" data-ng-model="nombre" maxlength="100" />
                     </div>
                 </div>
+                
                 <p>
                     <input type="button" value="Buscar" data-ng-click="buscar()" class="btn btn-primary" />
                     <input type="button" value="Nuevo" data-ng-click="nuevo()" class="btn btn-primary" />
@@ -139,20 +147,28 @@
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
-                        <th class="col-md-5">Nombre</th>
-                        <th class="col-md-3">Tipo Documento</th>
-                        <th class="col-md-3">Nro Documento</th>
+                        <th class="col-md-3">Usuario</th>
+                        <th class="col-md-1">Caduca</th>
+                        <th class="col-md-1">Unico Ingreso</th>
+                        <th class="col-md-1">Otros Logeos</th>
+                        <th class="col-md-1">Tipo</th>
+                        <th class="col-md-1">Estado</th>
+                        <th class="col-md-3">Persona</th>
                         <th class="col-md-1"></th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="persona in personas">
-                        <td>{{persona.Nombre}}</td>
-                        <td>{{persona.TipoDocumentoPersona.Nombre}}</td>
-                        <td>{{persona.NumeroDocumento}}</td>
+                    <tr ng-repeat="usuario in usuarios">
+                        <td>{{usuario.Usuario}}</td>
+                        <td>{{usuario.Caduca}}</td>
+                        <td>{{usuario.UnicoIngreso}}</td>
+                        <td>{{usuario.OtrosLogeos}}</td>
+                        <td>{{usuario.Tipo}}</td>
+                        <td>{{usuario.Estado}}</td>
+                        <td>{{usuario.Persona.Nombre}}</td>
                         <td>
                             <p>
-                                <input type="button" class="btn btn-primary" value="Modificar" data-ng-click="modificar(persona)" />
+                                <input type="button" class="btn btn-primary" value="Modificar" data-ng-click="modificar(usuario)" />
                             </p>
                         </td>
                     </tr>
