--- a/Interface_Layer/Views/MenusRoles.html
+++ b/Interface_Layer/Views/MenusRoles.html
@@ -1,10 +1,86 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
-    <title></title>
-	<meta charset="utf-8" />
+    <title>Midis Seguridad | Menus por Rol</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="../Content/bootstrap.min.css" media="screen">
+    <link rel="stylesheet" href="../Content/style.css">
 </head>
 <body>
-    <h2>Menus por Roles</h2>
+    <!--MENU-->
+    <div ng-controller="MenusCtrl">
+        <nav class="navbar navbar-inverse" role="navigation">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="Index.html">Midis Seguridad</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown" ng-repeat="modulo in modulos">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            {{modulo.Abreviatura}}<span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li ng-repeat="menu in modulo.Menus">
+                                <a href="{{menu.Ruta}}">{{menu.Nombre}}</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+
+    <div class="container" ng-controller="MenuRolCtrl">
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Menus</h3>
+                <div class="list-group">
+                    <a href="#" class="list-group-item" ng-repeat="persona in personas" data-ng-click="seleccionaPersona(persona)">
+                        <p class="list-group-item-text">{{persona.Nombre}}</p>
+                        <!--<input type="button" class="btn btn-primary" value="Seleccionar" data-ng-click="seleccionaPersona(persona)" />-->
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="container">
+                    <h3>Roles</h3>
+                    <div class="list-group">
+                        <a href="#" class="list-group-item" ng-repeat="rol in roles" data-ng-click="seleccionaRol(rol)">
+                            <p class="list-group-item-text">{{rol.Nombre}}</p>
+                            <!--<input type="button" class="btn btn-primary" value="Seleccionar" />-->
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <input type="text" class="form-control" id="txtPersona" data-ng-model="personaSeleccionada.Nombre" />
+            </div>
+            <div class="col-md-4">
+                <input type="text" class="form-control" id="txtRol" data-ng-model="rolSeleccionado.Nombre" />
+            </div>
+            <div class="col-md-4">
+                <input type="button" class="btn btn-primary" value="Seleccionar" data-ng-click="selecciona(personaSeleccionada, rolSeleccionado)" />
+            </div>
+        </div>
+
+        <div class="row">
+            <h3>Menus</h3>
+            <div class="list-group">
+                <a href="#" class="list-group-item" ng-repeat="menurol in menusroles">
+                    <p class="list-group-item-text">{{menurol.Persona}}</p>
+                    <p class="list-group-item-text">{{menurol.Rol}}</p>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <script type="text/javascript" src="../Scripts/jquery-3.1.1.min.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../Scripts/angular.min.js"></script>
+    <script type="text/javascript" src="../Angular/myApp.module.js"></script>
+    <script type="text/javascript" src="../Angular/menusCtrl.js"></script>
+    <script type="text/javascript" src="../Angular/menurolCtrl.js"></script>
 </body>
 </html>
