--- a/Interface_Layer/Views/Menus.html
+++ b/Interface_Layer/Views/Menus.html
@@ -104,7 +104,7 @@
 
         <!--LISTA-->
         <div class="row" data-ng-hide="estaEditable">
-            <form name="frmBusquedaModulo" style="width:800px;margin:0px auto;">
+            <form name="frmBusquedaMenu" style="width:800px;margin:0px auto;">
                 <div class="container-fluid form-group">
                     <label for="cmbBuscarSistema" class="col-md-2 control-label">Sistema: </label>
                     <div class="col-md-8">
